# idea-forge

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile.frontend  MODEL_SETUP.md  QUICK_START.md  README.md  UV_GUIDE.md  UV_MIGRATION.md  docker-compose.yml  package.json  setup.sh  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  cli.py  config.py  main.py  pyproject.toml  requirements.txt  seed_ideas.json  test_config.py  verify_stream.py
backend/agents/: __init__.py  critique.py  forge.py  researcher.py
backend/prompts/: __init__.py
backend/tools/: __init__.py  serper.py
components/: ForgeInterface.tsx  IdeaCard.tsx  LoadingOverlay.tsx
components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  slider.tsx  textarea.tsx
lib/: api.ts
